--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		To get a profile picture in higher resolution, you'll need to<br>
 		 - be signed in to Instagram<br>
 		 - set the User-Agent string temporarily to contain the substring "Instagram 1.1.1" to masquarade your desktop browser as an Instagram app<br>
-		 - and have <a href="/peektogram/userscript/ingram">this userscript</a> installed and activated at the time you click the "+" button next to the profile picture (it will open the url "https://i.instagram.com/api/v1/users/{numeric_user_id}/info/0/", where the script can operate: )<br>
+		 - and have <a href="/peektogram/userscript/ingram">this userscript</a> installed and activated at the time you click the "+" button next to the profile picture (it will open the url "https://i.instagram.com/api/v1/users/{numeric_user_id}/info/0/", where the script can operate. )<br>
 		<br><br>
 	    </p>
 	</div>
@@ -151,6 +151,7 @@
 
 	<div class="content-header profile-page clearfix">
 	    <div class="content-title">
+		<!--span class="show_stories_button">Stories</span-->
 		<span class="black-box"><a href="/peektogram/">0 Posts</a></span>
 		<span data-followers="0" class="bold"><span>0</span> Followers</span>
 		<span data-followers="0" class="bold"><span>0</span> Following</span>
@@ -293,6 +294,7 @@
             </div>
         </div>
     </div>
+    <div class="search-body2-wrapper" style="display: none"></div>
 
 </div>
 
@@ -391,6 +393,8 @@ function backup_lookup(input) {
 		xhr.setRequestHeader('Origin', 'www.instagram.com')
 	      }*/
 
+	function pixwox() {
+
 		var xhr = new XMLHttpRequest()
 		//var proxies = ['https://api.codetabs.com/v1/proxy/?quest=','https://cors-anywhere.herokuapp.com/']
 		var proxy = proxies[Math.round(Math.random())]
@@ -419,6 +423,7 @@ function backup_lookup(input) {
 
 			data.users[0] = {}
 			data.users[0].user = { "pk": id, "username": _username, "profile_pic_url": sessionStorage.getItem('search-profile_pic') }
+			var z = document.getElementById('search-profile-results'); if (z) z.innerHTML = z.innerHTML + '<br>Search results from pixwox.com<br><br>'
 			search_results(data, input)
 		      }
 		    }
@@ -427,6 +432,76 @@ function backup_lookup(input) {
 		}
 		//setHeader(xhr)
 		xhr.send('')
+	}
+
+
+	function external_search(site) {
+
+		var xhr = new XMLHttpRequest()
+		//var proxies = ['https://api.codetabs.com/v1/proxy/?quest=','https://cors-anywhere.herokuapp.com/']
+		var proxy = 'https://api.codetabs.com/v1/proxy/?quest='//proxies[Math.round(Math.random())]
+		xhr.open('get', proxy + 'https://' + site +'/search/'+ encodeURIComponent(input.toLowerCase().replace(/(\r\n|\n|\r)/gm," ").split(' ').join('')) + '/', true)//
+		xhr.onreadystatechange = function() {console.log(xhr.status +' '+xhr.readyState)//https://api.imgkoa.com/posts?userid=198945880&next=
+		  if (xhr.readyState == 4) {
+		    if (xhr.status == 200) {
+		    //console.log(xhr.responseText)
+		      if (xhr.responseText.split('<div class="search-body-wrapper">')[1] && xhr.responseText.split('class="profile-result" title="')[1]) {
+
+			var r = document.getElementsByClassName('search-body2-wrapper')[0]
+			r.innerHTML = xhr.responseText.split('<div class="search-body-wrapper">')[1].split('<script')[0]
+
+			var i, data = {}; data.users = []; data.places = []; data.hashtags = []
+				data.hashtags[0] = {}
+				data.hashtags[0].hashtag = {}
+				data.hashtags[0].hashtag = { "name": input.toLowerCase().replace(/(\r\n|\n|\r)/gm," ").split(' ').join('') }
+
+			var _users = r.getElementsByClassName('profile-result'), 
+				_hashtags = r.querySelector('#search-tags-results'), _hashtags = (_hashtags) ? _hashtags.getElementsByTagName('a') : []
+
+			for(i=0;i<_users.length;i++) {
+				data.users[i] = {}; var e = _users[i].getElementsByTagName('a')[0], f = e.getElementsByTagName('img')[0]
+				data.users[i].user = { "pk": e.href.split('/')[5], "username": e.href.split('/')[4], "profile_pic_url": (f && typeof f.src == 'string' && f.src.split('/url=')[1]) ? unescape(f.src.split('/url=')[1]).split('||').join('/') : '' }
+			}
+
+			for(i=0;i<_hashtags.length;i++) {
+				data.hashtags[i] = {}, e = _hashtags[i]
+				data.hashtags[i].hashtag = { "name": e.href.split('/')[4] }
+			}
+
+
+
+			if (data.users[1]) {
+
+				var z = document.getElementById('search-profile-results'); if (z) z.innerHTML = z.innerHTML + '<br>Search results from '+ site +'<br><br>'
+				search_results(data, input)
+
+			} else {
+
+			    if (site == 'www.gramho.com') { external_search('picuki.com'); pixwox() }
+
+			  }
+
+
+		      } else {
+
+			    if (site == 'www.gramho.com') { external_search('picuki.com'); pixwox() }
+
+			}
+		    }
+
+		    if (xhr.status >= 400) {
+
+			    if (site == 'www.gramho.com') { external_search('picuki.com'); pixwox() }
+
+		    }
+		  }
+		}
+		//setHeader(xhr)
+		xhr.send('')
+
+	}
+	external_search('www.gramho.com')
+
 
 }
 
@@ -819,7 +894,7 @@ if (window.page == 'media') {
 	  $('.single-photo').first().html(
 //'<img src="'+ localStorage.getItem("data-display-resources").split(";")[1] +'" id="image-photo" alt="'+ localStorage.getItem('data-username') +'">')
 		(function(){ var z = '', i; for(i=0;i < window.pd.data_display_resources.split('###').length; i++) z = z +
-				'<img src="'+ window.pd.data_display_resources.split('###')[i].split(';')[1] +'" id="image-photo" alt="'+ window.pd.data_username +'">\n'
+				'<img src="'+ ((window.pd.data_display_resources.split('###')[i].split(';')[1]) ? window.pd.data_display_resources.split('###')[i].split(';')[1] : window.pd.data_display_resources.split('###')[i].split(';')[0]) +'" id="image-photo" alt="'+ window.pd.data_username +'">\n'
 		return z; })()
 	    );
 	}
@@ -871,7 +946,7 @@ if (window.page == 'media') {
 		a = $('.content-title').children().first().next().next()
 		a.attr('data-followers', following); a.children().first().html(following)
 
-		a = $(".profile-hd-link").attr("onclick","{ window.open('https://i.instagram.com/api/v1/users/"+ ig_data.id +"/info/0/', '_blank').focus(); }")//this.setAttribute('href','#') }")
+		//a = $(".profile-hd-link").attr("onclick","{ window.open('https://i.instagram.com/api/v1/users/"+ ig_data.id +"/info/0/', '_blank').focus(); }")//this.setAttribute('href','#') }")
 
 		$('.single-photo-nickname').find('a').first().html('@'+ window.pd.data_username)
 		$('.single-photo-nickname').find('a').first().attr('href', site_url.substring(0,site_url.length-1) + '#profile#' + window.pd.data_username)
@@ -912,8 +987,10 @@ if (window.page == 'profile') {
 	    });
 */
 
+
 	    ig_data.link = "https://instagram.com/" + ig_data.username
 	    window.ig_data = ig_data;
+
 
 
 	    // this only works with logged-in user- or instagram app-credentials
@@ -978,6 +1055,15 @@ if (window.page == 'profile') {
 	    }//full sized profile pic
 
 
+		if (!ig_data.username && location.href.split("#")[2])
+		  ig_data.username = location.href.split("#")[2];
+
+		if (!ig_data.id && location.href.split("#")[3])
+		  ig_data.id = location.href.split("#")[3]
+
+
+
+
 		window.ig_data = ig_data; console.log(window.ig_data)
 
 
@@ -989,7 +1075,7 @@ if (window.page == 'profile') {
 		} catch(e){}
 		_username = ig_data.username
 		next = ig_data.next
-		window.stories()
+		window.stories(query)
 		window.paginate()
 
 	}//completed
@@ -1028,7 +1114,8 @@ if (window.page == 'profile') {
 
 	username = username.toLowerCase() // important
         var answer_url = 'https://www.instagram.com/web/search/topsearch/?context=blended&query=' + username + '&rank_token=0.9094692182667705&include_reel=true'
-						//'https://www.instagram.com/web/search/topsearch/?query=' + username;
+						//'https://www.instagram.com/web/search/topsearch/?query=' + username + '&rank_token=0.9094692182667705&include_reel=true';
+						//https://www.instagram.com/web/search/topsearch/?context=blended&query=' + username +'&rank_token=0.007843284061318068&include_reel=true
         $.get(answer_url, function(data){ //console.log(data) // search results for username
 
 		var z = (location.href.split('#')[3]) ? (1 * location.href.split('#')[3]) : null
@@ -1084,11 +1171,12 @@ if (window.page == 'profile') {
 // 003056d32c2554def87228bc3fd9668a
 // 472f257a40c653c64c666ce877d59d2b
 // 42323d64886122307be10013ad2dcc44
+// 42d2750e44dbac713ff30130659cd891
 //   query_id=17888483320059182
 
 //edge_media_to_comment	(rate_limit)		&variables={"id":"2","first":0,"shortcode":"xxxxxxxxxxx"}
 // f0986789a5c5d17c2400faebf16efd0d
-// 33ba35852cb50da46f5b5e889df7d159&variables={"shortcode":"xxxxxxxxxxx","first":20,"after":""}
+// 33ba35852cb50da46f5b5e889df7d159		&variables={"id":"2","shortcode":"xxxxxxxxxxx","first":20,"after":""}
 //edge_liked_by (rate_limit)
 // e0f59e4a1c8d78d0161873bc2ee7ec44
 
@@ -1099,6 +1187,9 @@ if (window.page == 'profile') {
 // 7dd9a7e2160524fd85f50317462cff9f
 // 56066f031e6239f35a904ac20c9f37d9
 // c76146de99bb02f6415203be841dd25a
+
+//shortcode_media //edge_media_to_tagged_user
+//cf28bf5eb45d62d4dc8e77cdb99d750d &variables={"shortcode":"CNQTvydja6r","child_comment_count":3,"fetch_comment_count":40,"parent_comment_count":24,"has_threaded_comments":true}
 
 //search_by_media_tag "ootd"			&variables={"tag_name":"ootd","first":10}
 //https://www.instagram.com/explore/tags/ootd/?__a=1
